--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-dom": "19.2.1",
     "react-medium-image-zoom": "^5.4.0",
     "tailwind-merge": "^3.4.0",
-    "zod": "^4.2.1"
+    "zod": "^4.2.1",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
