--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "lucide-react": "^0.561.0",
     "mongoose": "^9.0.2",
     "next": "16.0.10",
+    "next-themes": "^0.4.6",
     "react": "19.2.1",
     "react-dom": "19.2.1",
     "react-medium-image-zoom": "^5.4.0",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "zod": "^4.2.1",
     "zustand": "^5.0.9"
